--- a/app/index.html
+++ b/app/index.html
@@ -9,9 +9,8 @@
    <body>
       <header class="header flexbox" style="background-image: url('assets/1_home/slider.jpg');">
          <h1 class="header__slogan text-white text-center">
-            <span class="header__small-text">Hi, we are</span>
-            <img src="images/logo.png" alt="Lele">
-            crossmedia production
+            <span class="header__small-text">hi, we are</span>
+            <img src="images/logo_vertical.png" alt="Lele Crossmedia Production">
          </h1>
       </header>
 
@@ -19,34 +18,34 @@
          <div class="container row navbar__container">
             <nav class="row">
                <ul class="nav nav--left row">
+                  <li><a href="about.html">About Lele</a></li>
                   <li><a href="latest.html">Latest Productions</a></li>
-                  <li><a href="preview.html">Preview</a></li>
-                  <li><a href="awards.html">Awards</a></li>
                </ul>
                <a href="index.html" class="navbar__logo">
                   <img src="images/logo_black.png" alt="Lele Productions">
                </a>
                <ul class="nav nav--right row">
-                  <li><a href="about.html">About Lele</a></li>
                   <li><a href="cooperation.html">Cooperation</a></li>
                   <li><a href="contact.html">Contact</a></li>
                </ul>
             </nav>
-            <div class="lang">
+            <!-- <div class="lang">
                Pl
-            </div>
+            </div> -->
          </div>
       </div>
 
       <div class="about" style="background-image: url('assets/1_home/intro.png');">
          <div class="container">
-            <p>
-               LeLe Crossmedia Productions is one of the first and youngest partnerships in Poland, <br>
-               incorporating international points of view, endeavors, passions, and love <br>
-               for the art of cinema, photography and animation; for the opportunities <br>
-               and possibilities of cross media projects. We are pride in our unity <br>
-               and teamwork in accomplishing our mission.
-            </p>
+            <div class="text-thin">
+               <p>
+                  LeLe Crossmedia Productions is one of the first and youngest partnerships in Poland, <br>
+                  incorporating international points of view, endeavors, passions, and love <br>
+                  for the art of cinema, photography and animation; for the opportunities <br>
+                  and possibilities of cross media projects. We are pride in our unity <br>
+                  and teamwork in accomplishing our mission.
+               </p>
+            </div>
             <a href="about.html" class="btn">Read more</a>
          </div>
       </div>
@@ -60,19 +59,19 @@
                      <div class="col-md-8">
                         <img src="assets/1_home/latest_03.jpg" alt="" class="image">
                      </div>
-                     <div class="col-md-4">
-                        <h3>Searching for Devo</h3>
+                     <div class="col-md-4 pl-40">
+                        <h3 class="text-semibold text-italic">Searching for Devo</h3>
                         <p>
 
                         </p>
                      </div>
                   </div>
 
-                  <div class="row">
-                     <div class="col-md-5">
-                        <img src="assets/1_home/latest_08.jpg" alt="" class="image">
+                  <div class="row stretchbox-md">
+                     <div class="col-md-5 flexbox-md latest__flex-bot">
+                        <img src="assets/1_home/latest_08.jpg" alt="">
                      </div>
-                     <div class="col-md-3">
+                     <div class="col-md-3 pl-40 pr-40">
                         <p>
 
                         </p>
@@ -85,8 +84,8 @@
 
                <section class="latest__item">
                   <div class="row">
-                     <div class="col-md-4">
-                        <h3>Skate Boat</h3>
+                     <div class="col-md-4 pr-40">
+                        <h3 class="text-semibold text-italic">Skate Boat</h3>
                         <p>
 
                         </p>
@@ -96,23 +95,23 @@
                      </div>
                   </div>
 
-                  <div class="row">
+                  <div class="row stretchbox-md">
                      <div class="col-md-4">
                         <img src="assets/1_home/latest2_06.jpg" alt="" class="image">
                      </div>
-                     <div class="col-md-3">
+                     <div class="col-md-3 pl-40 pr-40">
                         <p>
 
                         </p>
                      </div>
-                     <div class="col-md-5">
-                        <img src="assets/1_home/latest2_09.jpg" alt="" class="image">
+                     <div class="col-md-5 flexbox-md latest__flex-bot">
+                        <img src="assets/1_home/latest2_09.jpg" alt="">
                      </div>
                   </div>
                </section>
 
                <div class="text-center">
-                  <a href="latest.html" class="btn latest__btn">Zobacz więcej produkcji</a>
+                  <a href="latest.html" class="btn btn--underline">Zobacz więcej produkcji</a>
                </div>
             </div>
          </div>
@@ -126,7 +125,7 @@
                <div class="col-md-6">
                   <img src="assets/1_home/about_03.jpg" alt="">
                </div>
-               <div class="col-md-6">
+               <div class="col-md-6 pl-40">
 
                </div>
             </div>
@@ -144,7 +143,7 @@
             <div class="col-md-4">
                <img src="images/logo_horizontal.png" alt="">
             </div>
-            <div class="col-md-4 text-center">
+            <div class="col-md-4 text-center text-thin">
                <p>
                   +48 535 124 887 <br>
                   lelecrossmedia@gmail.com
@@ -179,7 +178,5 @@
 
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
       <!-- <script src="js/main.js"></script> -->
-      <script src="https://use.typekit.net/bwf6gqt.js"></script>
-      <script>try{Typekit.load({ async: true });}catch(e){}</script>
    </body>
 </html>
