contact page, rwd

--- a/app/index.html
+++ b/app/index.html
@@ -14,9 +14,19 @@
          </h1>
       </header>
 
-      <div class="navbar">
-         <div class="container row navbar__container">
-            <nav class="row">
+      <div class="navbar-wrapper">
+         <div class="container row navbar-wrapper__container">
+            <div class="mobile-logo">
+               <a href="index.html">
+                  <img src="images/logo_black.png" alt="Lele Productions" class="image">
+               </a>
+            </div>
+
+            <div class="burger">
+               <div class="burger__bar"></div>
+            </div>
+
+            <nav class="row navbar text-center">
                <ul class="nav nav--left row">
                   <li><a href="about.html">About Lele</a></li>
                   <li><a href="latest.html">Latest Productions</a></li>
@@ -55,56 +65,56 @@
          <div class="dark-bg ptb-80">
             <div class="container">
                <section class="latest__item">
-                  <div class="row">
-                     <div class="col-md-8">
-                        <img src="assets/1_home/latest_03.jpg" alt="" class="image">
-                     </div>
+                  <div class="row flexbox-md">
                      <div class="col-md-4 pl-40">
                         <h3 class="text-semibold text-italic">Searching for Devo</h3>
                         <p>
-
+                           Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                         </p>
+                     </div>
+                     <div class="col-md-8 image-wrapper flexbox--zero">
+                        <img src="assets/1_home/latest_03.jpg" alt="" class="image">
                      </div>
                   </div>
 
-                  <div class="row stretchbox-md">
-                     <div class="col-md-5 flexbox-md latest__flex-bot">
+                  <div class="row flexbox-md stretchbox-lg">
+                     <div class="col-md-5 flexbox-md latest__flex-bot latest__lg-show">
                         <img src="assets/1_home/latest_08.jpg" alt="">
                      </div>
-                     <div class="col-md-3 pl-40 pr-40">
+                     <div class="col-md-8 col-lg-3 pl-40 pr-40">
                         <p>
-
+                           Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                         </p>
                      </div>
                      <div class="col-md-4">
-                        <img src="assets/1_home/latest_06.jpg" alt="" class="image">
+                        <img src="assets/1_home/latest_06.jpg" alt="" class="image image--hidden-mobile">
                      </div>
                   </div>
                </section>
 
                <section class="latest__item">
-                  <div class="row">
+                  <div class="row flexbox-md">
                      <div class="col-md-4 pr-40">
                         <h3 class="text-semibold text-italic">Skate Boat</h3>
                         <p>
-
+                           Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                         </p>
                      </div>
-                     <div class="col-md-8">
+                     <div class="col-md-8 image-wrapper">
                         <img src="assets/1_home/latest2_03.jpg" alt="" class="image">
                      </div>
                   </div>
 
-                  <div class="row stretchbox-md">
+                  <div class="row flexbox-md stretchbox-lg">
                      <div class="col-md-4">
-                        <img src="assets/1_home/latest2_06.jpg" alt="" class="image">
+                        <img src="assets/1_home/latest2_06.jpg" alt="" class="image image--hidden-mobile">
                      </div>
-                     <div class="col-md-3 pl-40 pr-40">
+                     <div class="col-md-8 col-lg-3 pl-40 pr-40">
                         <p>
-
+                           Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                         </p>
                      </div>
-                     <div class="col-md-5 flexbox-md latest__flex-bot">
+                     <div class="col-md-5 flexbox-md latest__flex-bot latest__lg-show">
                         <img src="assets/1_home/latest2_09.jpg" alt="">
                      </div>
                   </div>
@@ -122,47 +132,51 @@
             <h2 class="text-center mtb-80">O Lele</h2>
 
             <div class="row">
-               <div class="col-md-6">
-                  <img src="assets/1_home/about_03.jpg" alt="">
+               <div class="col-md-6 image-wrapper">
+                  <img src="assets/1_home/about_03.jpg" alt="" class="image">
                </div>
                <div class="col-md-6 pl-40">
-
+                  <p>
+                     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                  </p>
                </div>
             </div>
 
             <div class="about__img-wrapper">
-               <img src="assets/1_home/about_08.jpg" alt="" class="about__img">
-               <img src="assets/1_home/about_06.jpg" alt="" class="about__img">
-               <img src="assets/1_home/about_10.jpg" alt="" class="about__img">
+               <img src="assets/1_home/about_08.jpg" alt="" class="about__img image--hidden-mobile">
+               <img src="assets/1_home/about_06.jpg" alt="" class="about__img image--hidden-mobile">
+               <img src="assets/1_home/about_10.jpg" alt="" class="about__img image--hidden-mobile">
             </div>
          </div>
       </section>
 
-      <footer class="footer dark-bg">
-         <div class="container row flexbox">
-            <div class="col-md-4">
-               <img src="images/logo_horizontal.png" alt="">
-            </div>
-            <div class="col-md-4 text-center text-thin">
-               <p>
-                  +48 535 124 887 <br>
-                  lelecrossmedia@gmail.com
-               </p>
-               <p>
-                  zobacz również:
-                  <strong>
-                     <a href="http://www.lelefactory.blogspot.pl">www.lelefactory.blogspot.pl</a>
-                  </strong>
-               </p>
-            </div>
+      <footer>
+         <div class="footer dark-bg">
+            <div class="container row flexbox-md">
+               <div class="col-md-4 text-center">
+                  <img src="images/logo_horizontal.png" alt="">
+               </div>
+               <div class="col-md-4 text-center text-thin">
+                  <p>
+                     +48 535 124 887 <br>
+                     lelecrossmedia@gmail.com
+                  </p>
+                  <p>
+                     zobacz również:
+                     <strong>
+                        <a href="http://www.lelefactory.blogspot.pl">www.lelefactory.blogspot.pl</a>
+                     </strong>
+                  </p>
+               </div>
 
-            <div class="col-md-4 text-right">
-               <a href="">
-                  <span class="social-icon social-icon--fb"></span>
-               </a>
-               <a href="">
-                  <span class="social-icon social-icon--inst"></span>
-               </a>
+               <div class="col-md-4 text-center">
+                  <a href="">
+                     <span class="social-icon social-icon--fb"></span>
+                  </a>
+                  <a href="">
+                     <span class="social-icon social-icon--inst"></span>
+                  </a>
+               </div>
             </div>
          </div>
 
@@ -177,6 +191,6 @@
       </footer>
 
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
-      <!-- <script src="js/main.js"></script> -->
+      <script src="js/main.js"></script>
    </body>
 </html>
