--- a/app/about.html
+++ b/app/about.html
@@ -7,9 +7,19 @@
       <link href="stylesheets/screen.css"rel="stylesheet">
    </head>
    <body>
-      <div class="navbar navbar--sub">
-         <div class="container row navbar__container">
-            <nav class="row">
+      <div class="navbar-wrapper navbar-wrapper--sub">
+         <div class="container row navbar-wrapper__container">
+            <div class="mobile-logo">
+               <a href="index.html">
+                  <img src="images/logo_black.png" alt="Lele Productions" class="image">
+               </a>
+            </div>
+
+            <div class="burger">
+               <div class="burger__bar"></div>
+            </div>
+
+            <nav class="row navbar text-center">
                <ul class="nav nav--left row">
                   <li><a href="about.html">About Lele</a></li>
                   <li><a href="latest.html">Latest Productions</a></li>
@@ -27,14 +37,14 @@
             </div> -->
          </div>
       </div>
- 
-      <div class="container mtb-80">
+
+      <div class="container mtb-80 mobile-space">
          <h1 class="mtb-80 text-center">
             About Lele
          </h1>
          <div class="row stretchbox-md">
-            <div class="col-md-6">
-               <img src="assets/2_about/about_03.jpg" alt="">
+            <div class="col-md-6 image-wrapper flexbox--zero">
+               <img src="assets/2_about/about_03.jpg" alt="" class="image">
             </div>
             <div class="col-md-6 pl-40 text-thin flexbox">
                <p>
@@ -43,13 +53,13 @@
             </div>
          </div>
          <div class="row stretchbox-md">
-            <div class="col-md-6 pr-40 text-thin flexbox">
+            <div class="col-md-6 image-wrapper">
+               <img src="assets/2_about/about_07.jpg" alt="" class="image">
+            </div>
+            <div class="col-md-6 pr-40 text-thin flexbox flexbox--zero">
                <p>
                   While, our main aim is to promote cross media projects we also undertake the production and co-production of the desired film and animation attributes. LeLe Productions helps to explore the new cross media areas and encourages implementing the group work by its colorful and innovative disposition.
                </p>
-            </div>
-            <div class="col-md-6">
-               <img src="assets/2_about/about_07.jpg" alt="">
             </div>
          </div>
       </div>
@@ -58,21 +68,21 @@
          <h2 class="mtb-80 text-center">Poznaj naszą ekipę</h2>
          <div class="row">
             <section class="col-md-6 row staff__col">
-               <div class="col-md-4 pr-40">
+               <div class="col-xs-4 staff__img-wrapper">
                   <img src="assets/2_about/we_03.jpg" alt="" class="image">
                </div>
-               <div class="col-md-8">
+               <div class="col-xs-8">
                   <h4>Anita Kwiatkowska Naqvi</h4>
                   <p>
-                     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                   </p>
                </div>
             </section>
             <section class="col-md-6 row staff__col">
-               <div class="col-md-4 pr-40">
+               <div class="col-xs-4 staff__img-wrapper">
                   <img src="assets/2_about/we_05.jpg" alt="" class="image">
                </div>
-               <div class="col-md-8">
+               <div class="col-xs-8">
                   <h4>Leyla Comert</h4>
                   <p>
                      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
@@ -83,10 +93,10 @@
 
          <div class="row">
             <section class="col-md-6 row staff__col">
-               <div class="col-md-4 pr-40">
+               <div class="col-xs-4 staff__img-wrapper">
                   <img src="assets/2_about/we_09.jpg" alt="" class="image">
                </div>
-               <div class="col-md-8">
+               <div class="col-xs-8">
                   <h4>Róża Misztela</h4>
                   <p>
                      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
@@ -94,10 +104,10 @@
                </div>
             </section>
             <section class="col-md-6 row staff__col">
-               <div class="col-md-4 pr-40">
+               <div class="col-xs-4 staff__img-wrapper">
                   <img src="assets/2_about/we_10.jpg" alt="" class="image">
                </div>
-               <div class="col-md-8">
+               <div class="col-xs-8">
                   <h4>Tedeusz Chudy</h4>
                   <p>
                      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
@@ -108,10 +118,10 @@
 
          <div class="row">
             <section class="col-md-6 row staff__col">
-               <div class="col-md-4 pr-40">
+               <div class="col-xs-4 staff__img-wrapper">
                   <img src="assets/2_about/we_13.jpg" alt="" class="image">
                </div>
-               <div class="col-md-8">
+               <div class="col-xs-8">
                   <h4>Żaneta Pawlak</h4>
                   <p>
                      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
@@ -119,25 +129,11 @@
                </div>
             </section>
             <section class="col-md-6 row staff__col">
-               <div class="col-md-4 pr-40">
+               <div class="col-xs-4 staff__img-wrapper">
                   <img src="assets/2_about/we_14.jpg" alt="" class="image">
                </div>
-               <div class="col-md-8">
+               <div class="col-xs-8">
                   <h4>Maciej Roman</h4>
-                  <p>
-                     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                  </p>
-               </div>
-            </section>
-         </div>
-
-         <div class="row">
-            <section class="col-md-6 row staff__col">
-               <div class="col-md-4 pr-40">
-                  <img src="assets/2_about/we_17.jpg" alt="" class="image">
-               </div>
-               <div class="col-md-8">
-                  <h4>Aleksandra Celka</h4>
                   <p>
                      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                   </p>
@@ -146,31 +142,33 @@
          </div>
       </article>
 
-      <footer class="footer dark-bg">
-         <div class="container row flexbox">
-            <div class="col-md-4">
-               <img src="images/logo_horizontal.png" alt="">
-            </div>
-            <div class="col-md-4 text-center text-thin">
-               <p>
-                  +48 535 124 887 <br>
-                  lelecrossmedia@gmail.com
-               </p>
-               <p>
-                  zobacz również:
-                  <strong>
-                     <a href="http://www.lelefactory.blogspot.pl">www.lelefactory.blogspot.pl</a>
-                  </strong>
-               </p>
-            </div>
+      <footer>
+         <div class="footer dark-bg">
+            <div class="container row flexbox-md">
+               <div class="col-md-4 text-center">
+                  <img src="images/logo_horizontal.png" alt="">
+               </div>
+               <div class="col-md-4 text-center text-thin">
+                  <p>
+                     +48 535 124 887 <br>
+                     lelecrossmedia@gmail.com
+                  </p>
+                  <p>
+                     zobacz również:
+                     <strong>
+                        <a href="http://www.lelefactory.blogspot.pl">www.lelefactory.blogspot.pl</a>
+                     </strong>
+                  </p>
+               </div>
 
-            <div class="col-md-4 text-right">
-               <a href="">
-                  <span class="social-icon social-icon--fb"></span>
-               </a>
-               <a href="">
-                  <span class="social-icon social-icon--inst"></span>
-               </a>
+               <div class="col-md-4 text-center">
+                  <a href="">
+                     <span class="social-icon social-icon--fb"></span>
+                  </a>
+                  <a href="">
+                     <span class="social-icon social-icon--inst"></span>
+                  </a>
+               </div>
             </div>
          </div>
 
@@ -185,6 +183,6 @@
       </footer>
 
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
-      <!-- <script src="js/main.js"></script> -->
+      <script src="js/main.js"></script>
    </body>
 </html>
