--- a/app/latest.html
+++ b/app/latest.html
@@ -4,12 +4,22 @@
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Lele Productions</title>
-      <link href="stylesheets/screen.css"rel="stylesheet">
+      <link href="stylesheets/screen.css" rel="stylesheet">
    </head>
    <body>
-      <div class="navbar navbar--sub">
-         <div class="container row navbar__container">
-            <nav class="row">
+      <div class="navbar-wrapper navbar-wrapper--sub">
+         <div class="container row navbar-wrapper__container">
+            <div class="mobile-logo">
+               <a href="index.html">
+                  <img src="images/logo_black.png" alt="Lele Productions" class="image">
+               </a>
+            </div>
+
+            <div class="burger">
+               <div class="burger__bar"></div>
+            </div>
+
+            <nav class="row navbar text-center">
                <ul class="nav nav--left row">
                   <li><a href="about.html">About Lele</a></li>
                   <li><a href="latest.html">Latest Productions</a></li>
@@ -28,62 +38,62 @@
          </div>
       </div>
 
-      <div class="container mtb-80">
+      <div class="container mtb-80 mobile-space">
          <h1 class="mtb-80 text-center">
             Latest Productions
          </h1>
          <section class="latest__item">
-            <div class="row">
+            <div class="row flexbox-md">
                <div class="col-md-4 pr-40">
                   <h3 class="text-semibold text-italic">Granica</h3>
                   <p>
-
+                     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                   </p>
                </div>
-               <div class="col-md-8">
+               <div class="col-md-8 image-wrapper">
                   <img src="assets/3_latest/1_1.jpg" alt="" class="image">
                </div>
             </div>
 
-            <div class="row stretchbox-md">
+            <div class="row flexbox-md stretchbox-lg">
                <div class="col-md-4">
-                  <img src="assets/3_latest/1_2.jpg" alt="" class="image">
+                  <img src="assets/3_latest/1_2.jpg" alt="" class="image image--hidden-mobile">
                </div>
-               <div class="col-md-3 pl-40 pr-40">
+               <div class="col-md-8 col-lg-3 pl-40 pr-40">
                   <p>
-
+                     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                   </p>
                </div>
-               <div class="col-md-5 flexbox-md latest__flex-bot">
+               <div class="col-md-5 flexbox-md latest__flex-bot latest__lg-show">
                   <img src="assets/3_latest/1_3.jpg" alt="">
                </div>
             </div>
          </section>
 
          <section class="latest__item">
-            <div class="row">
-               <div class="col-md-8">
-                  <img src="assets/3_latest/2_1.jpg" alt="" class="image">
-               </div>
+            <div class="row flexbox-md">
                <div class="col-md-4 pl-40">
                   <h3 class="text-semibold text-italic">Euforia</h3>
                   <p>
-
+                     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                   </p>
+               </div>
+               <div class="col-md-8 image-wrapper flexbox--zero">
+                  <img src="assets/3_latest/2_1.jpg" alt="" class="image">
                </div>
             </div>
 
-            <div class="row stretchbox-md">
-               <div class="col-md-5 flexbox-md latest__flex-bot">
+            <div class="row flexbox-md stretchbox-lg">
+               <div class="col-md-5 flexbox-md latest__flex-bot latest__lg-show">
                   <img src="assets/3_latest/2_2.jpg" alt="">
                </div>
-               <div class="col-md-3 pl-40 pr-40">
+               <div class="col-md-8 col-lg-3 pl-40 pr-40">
                   <p>
-
+                     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                   </p>
                </div>
                <div class="col-md-4">
-                  <img src="assets/3_latest/2_3.jpg" alt="" class="image">
+                  <img src="assets/3_latest/2_3.jpg" alt="" class="image image--hidden-mobile">
                </div>
             </div>
          </section>
@@ -93,53 +103,53 @@
                <div class="col-md-4 pr-40">
                   <h3 class="text-semibold text-italic">Hardzi</h3>
                   <p>
-
+                     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                   </p>
                </div>
-               <div class="col-md-8">
+               <div class="col-md-8 image-wrapper">
                   <img src="assets/3_latest/3_1.jpg" alt="" class="image">
                </div>
             </div>
 
-            <div class="row stretchbox-md">
+            <div class="row flexbox-md stretchbox-lg">
                <div class="col-md-4">
-                  <img src="assets/3_latest/3_2.jpg" alt="" class="image">
+                  <img src="assets/3_latest/3_2.jpg" alt="" class="image image--hidden-mobile">
                </div>
-               <div class="col-md-3 pl-40 pr-40">
+               <div class="col-md-8 col-lg-3 pl-40 pr-40">
                   <p>
-
+                     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                   </p>
                </div>
-               <div class="col-md-5 flexbox-md latest__flex-bot">
+               <div class="col-md-5 flexbox-md latest__flex-bot latest__lg-show">
                   <img src="assets/3_latest/3_3.jpg" alt="">
                </div>
             </div>
          </section>
 
          <section class="latest__item">
-            <div class="row">
-               <div class="col-md-8">
-                  <img src="assets/3_latest/4_1.jpg" alt="" class="image">
-               </div>
+            <div class="row flexbox-md">
                <div class="col-md-4 pl-40">
                   <h3 class="text-semibold text-italic">Locus</h3>
                   <p>
-
+                     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                   </p>
+               </div>
+               <div class="col-md-8 image-wrapper flexbox--zero">
+                  <img src="assets/3_latest/4_1.jpg" alt="" class="image">
                </div>
             </div>
 
-            <div class="row stretchbox-md">
-               <div class="col-md-5 flexbox-md latest__flex-bot">
+            <div class="row flexbox-md stretchbox-lg">
+               <div class="col-md-5 flexbox-md latest__flex-bot latest__lg-show">
                   <img src="assets/3_latest/4_2.jpg" alt="">
                </div>
-               <div class="col-md-3 pl-40 pr-40">
+               <div class="col-md-8 col-lg-3 pl-40 pr-40">
                   <p>
-
+                     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                   </p>
                </div>
                <div class="col-md-4">
-                  <img src="assets/3_latest/4_3.jpg" alt="" class="image">
+                  <img src="assets/3_latest/4_3.jpg" alt="" class="image image--hidden-mobile">
                </div>
             </div>
          </section>
@@ -149,53 +159,53 @@
                <div class="col-md-4 pr-40">
                   <h3 class="text-semibold text-italic">Imbros</h3>
                   <p>
-
+                     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                   </p>
                </div>
-               <div class="col-md-8">
+               <div class="col-md-8 image-wrapper">
                   <img src="assets/3_latest/5_1.jpg" alt="" class="image">
                </div>
             </div>
 
-            <div class="row stretchbox-md">
+            <div class="row flexbox-md stretchbox-lg">
                <div class="col-md-4">
-                  <img src="assets/3_latest/5_2.jpg" alt="" class="image">
+                  <img src="assets/3_latest/5_2.jpg" alt="" class="image image--hidden-mobile">
                </div>
-               <div class="col-md-3 pl-40 pr-40">
+               <div class="col-md-8 col-lg-3 pl-40 pr-40">
                   <p>
-
+                     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                   </p>
                </div>
-               <div class="col-md-5 flexbox-md latest__flex-bot">
+               <div class="col-md-5 flexbox-md latest__flex-bot latest__lg-show">
                   <img src="assets/3_latest/5_3.jpg" alt="">
                </div>
             </div>
          </section>
 
          <section class="latest__item">
-            <div class="row">
-               <div class="col-md-8">
-                  <img src="assets/3_latest/6_1.jpg" alt="" class="image">
-               </div>
+            <div class="row flexbox-md">
                <div class="col-md-4 pl-40">
                   <h3 class="text-semibold text-italic">Piotrusiu</h3>
                   <p>
-
+                     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                   </p>
+               </div>
+               <div class="col-md-8 image-wrapper flexbox--zero">
+                  <img src="assets/3_latest/6_1.jpg" alt="" class="image">
                </div>
             </div>
 
-            <div class="row stretchbox-md">
-               <div class="col-md-5 flexbox-md latest__flex-bot">
+            <div class="row flexbox-md stretchbox-lg">
+               <div class="col-md-5 flexbox-md latest__flex-bot latest__lg-show">
                   <img src="assets/3_latest/6_2.jpg" alt="">
                </div>
-               <div class="col-md-3 pl-40 pr-40">
+               <div class="col-md-8 col-lg-3 pl-40 pr-40">
                   <p>
-
+                     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                   </p>
                </div>
                <div class="col-md-4">
-                  <img src="assets/3_latest/6_3.jpg" alt="" class="image">
+                  <img src="assets/3_latest/6_3.jpg" alt="" class="image image--hidden-mobile">
                </div>
             </div>
          </section>
@@ -205,53 +215,53 @@
                <div class="col-md-4 pr-40">
                   <h3 class="text-semibold text-italic">Searching for Devo</h3>
                   <p>
-
+                     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                   </p>
                </div>
-               <div class="col-md-8">
+               <div class="col-md-8 image-wrapper">
                   <img src="assets/3_latest/7_1.jpg" alt="" class="image">
                </div>
             </div>
 
-            <div class="row stretchbox-md">
+            <div class="row flexbox-md stretchbox-lg">
                <div class="col-md-4">
-                  <img src="assets/3_latest/7_2.jpg" alt="" class="image">
+                  <img src="assets/3_latest/7_2.jpg" alt="" class="image image--hidden-mobile">
                </div>
-               <div class="col-md-3 pl-40 pr-40">
+               <div class="col-md-8 col-lg-3 pl-40 pr-40">
                   <p>
-
+                     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                   </p>
                </div>
-               <div class="col-md-5 flexbox-md latest__flex-bot">
+               <div class="col-md-5 flexbox-md latest__flex-bot latest__lg-show">
                   <img src="assets/3_latest/7_3.jpg" alt="">
                </div>
             </div>
          </section>
 
          <section class="latest__item">
-            <div class="row">
-               <div class="col-md-8">
-                  <img src="assets/3_latest/8_1.jpg" alt="" class="image">
-               </div>
+            <div class="row flexbox-md">
                <div class="col-md-4 pl-40">
                   <h3 class="text-semibold text-italic">Boat Town</h3>
                   <p>
-
+                     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                   </p>
+               </div>
+               <div class="col-md-8 image-wrapper flexbox--zero">
+                  <img src="assets/3_latest/8_1.jpg" alt="" class="image">
                </div>
             </div>
 
-            <div class="row stretchbox-md">
-               <div class="col-md-5 flexbox-md latest__flex-bot">
+            <div class="row flexbox-md stretchbox-lg">
+               <div class="col-md-5 flexbox-md latest__flex-bot latest__lg-show">
                   <img src="assets/3_latest/8_2.jpg" alt="">
                </div>
-               <div class="col-md-3 pl-40 pr-40">
+               <div class="col-md-8 col-lg-3 pl-40 pr-40">
                   <p>
-
+                     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                   </p>
                </div>
                <div class="col-md-4">
-                  <img src="assets/3_latest/8_3.jpg" alt="" class="image">
+                  <img src="assets/3_latest/8_3.jpg" alt="" class="image image--hidden-mobile">
                </div>
             </div>
          </section>
@@ -259,31 +269,33 @@
 
 
 
-      <footer class="footer dark-bg">
-         <div class="container row flexbox">
-            <div class="col-md-4">
-               <img src="images/logo_horizontal.png" alt="">
-            </div>
-            <div class="col-md-4 text-center text-thin">
-               <p>
-                  +48 535 124 887 <br>
-                  lelecrossmedia@gmail.com
-               </p>
-               <p>
-                  zobacz również:
-                  <strong>
-                     <a href="http://www.lelefactory.blogspot.pl">www.lelefactory.blogspot.pl</a>
-                  </strong>
-               </p>
-            </div>
+      <footer>
+         <div class="footer dark-bg">
+            <div class="container row flexbox-md">
+               <div class="col-md-4 text-center">
+                  <img src="images/logo_horizontal.png" alt="">
+               </div>
+               <div class="col-md-4 text-center text-thin">
+                  <p>
+                     +48 535 124 887 <br>
+                     lelecrossmedia@gmail.com
+                  </p>
+                  <p>
+                     zobacz również:
+                     <strong>
+                        <a href="http://www.lelefactory.blogspot.pl">www.lelefactory.blogspot.pl</a>
+                     </strong>
+                  </p>
+               </div>
 
-            <div class="col-md-4 text-right">
-               <a href="">
-                  <span class="social-icon social-icon--fb"></span>
-               </a>
-               <a href="">
-                  <span class="social-icon social-icon--inst"></span>
-               </a>
+               <div class="col-md-4 text-center">
+                  <a href="">
+                     <span class="social-icon social-icon--fb"></span>
+                  </a>
+                  <a href="">
+                     <span class="social-icon social-icon--inst"></span>
+                  </a>
+               </div>
             </div>
          </div>
 
@@ -298,6 +310,6 @@
       </footer>
 
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
-      <!-- <script src="js/main.js"></script> -->
+      <script src="js/main.js"></script>
    </body>
 </html>
